# stm32f4_function_generator

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  f4_function_generator.ioc
Core/Inc/: dac.h  main.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h
Core/Src/: dac.c  dma.c  gpio.c  main.c  stm32f4xx_it.c  tim.c
Core/app/: CMakeLists.txt  adc_dac.c  adc_dac.h  app.c  app.h  dac_dma.c  dac_dma.h  func_gen.c  func_gen.h  ring_buffer.c  ring_buffer.h  sig_gen.c  sig_gen.h
Core/app/dbgmon/: CMakeLists.txt  dbgmon.c  dbgmon.h  dbgmsg.c  dbgmsg.h
USB_DEVICE/App/: usbd_cdc_if.c
cmake/stm32cubemx/: CMakeLists.txt
